Created "component" for portfolio item

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@
   --font-size-m: calc((24/16)*1rem);
   --font-size-s: calc((20/16)*1rem);
   --font-size-xs: calc((16/16)*1rem);
+  --padding-body: 5rem;
   font-family: "IBM Plex Sans", "Inter", "Arial", sans-serif;
   color: var(--textcolor);
 }
@@ -29,7 +30,10 @@
 }
 
 @media screen and (max-width: 800px) {
-  body .panel-container {
+  :root {
+    --padding-body: 2.5rem;
+  }
+  body .portfolio-item--container_responsive-grid {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -37,10 +41,11 @@
     margin-bottom: 5em;
     box-sizing: "border-box";
   }
-  body .hero-image {
+  body .portfolio-item--image_hero {
     height: 250px !important;
+    width: auto !important;
   }
-  body iframe {
+  body .figure--video {
     height: 250px !important;
   }
   body #about-me-content {
@@ -56,35 +61,15 @@
     --font-size-s: calc((18/16)*1rem);
     --font-size-xs: calc((16/16)*1rem);
   }
-  body .padding-sides {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-  body .margin-sides {
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-  }
-  body #link-about-me-text {
+  body #camod-name {
     width: 0;
     height: 0;
     padding-left: 0 !important;
     overflow: hidden;
   }
-  body #menu-button {
-    display: block;
-  }
 }
 * {
   box-sizing: border-box;
-}
-
-section {
-  margin-bottom: 2rem;
-}
-
-body {
-  margin: 0;
-  background-color: var(--background);
 }
 
 /*Styles*/
@@ -101,24 +86,9 @@ body {
   margin-left: auto;
 }
 
-.heading1 {
-  font-size: var(--font-size-xl);
-  font-weight: normal;
-}
-
-.heading2 {
-  font-size: var(--font-size-l);
-  font-weight: normal;
-}
-
 .heading3 {
   font-size: var(--font-size-m);
   font-weight: 600;
-}
-
-.heading4 {
-  font-size: var(--font-size-s);
-  font-weight: normal;
 }
 
 .red {
@@ -137,29 +107,6 @@ body {
   color: rgb(227, 163, 39);
 }
 
-.tool-tip {
-  display: inline-block;
-  pointer-events: fill;
-}
-.tool-tip:hover .tool-tip-text {
-  visibility: visible;
-  opacity: 1;
-  border: 1px solid var(--background);
-}
-
-.tool-tip .tool-tip-text {
-  visibility: hidden;
-  width: fit-content;
-  background-color: var(--textcolor);
-  color: var(--background);
-  text-align: right;
-  padding: 2px 5px;
-  position: absolute;
-  z-index: 2;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
 .focus-link:focus {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0001) 50%, var(--textcolor-20) 50%);
 }
@@ -176,24 +123,6 @@ body {
     scale: 1;
   }
 }
-.focus-button:focus {
-  outline: 2px solid var(--textcolor);
-}
-.focus-button:focus-visible {
-  outline: 2px solid var(--textcolor);
-  animation: press 0.5s ease;
-}
-
-.padding-sides {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.margin-sides {
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
-
 /*Elements*/
 h1,
 h2,
@@ -203,28 +132,51 @@ p {
   margin: 0;
 }
 
-body {
+.body {
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  margin: 0;
+  background-color: var(--background);
 }
-
-/*Header*/
-header {
+.body--section, .body--section_footer, .body--section_contact, .body--section_portfolio, .body--section_about-me, .body--section_header {
+  padding-left: var(--padding-body);
+  padding-right: var(--padding-body);
   display: flex;
+  margin-bottom: var(--padding-body);
+  gap: 2rem;
+}
+.body--section_header {
   align-items: baseline;
   justify-content: space-between;
   padding-top: 32px;
   padding-bottom: 32px;
-  margin: 0;
   position: sticky;
   z-index: 1;
   top: 0;
   background-color: var(--background);
   border-bottom: 1px solid var(--textcolor);
 }
+.body--section_about-me {
+  flex-direction: column;
+  height: fit-content;
+  min-height: 100vh;
+}
+.body--section_portfolio {
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  padding: 0;
+}
+.body--section_contact {
+  flex-direction: column;
+  padding-top: 2.5rem;
+  border-top: 1px solid var(--textcolor);
+}
+.body--section_footer {
+  justify-content: flex-end;
+}
 
-nav {
+.navigation {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -232,104 +184,98 @@ nav {
   gap: 1rem;
   width: 100%;
 }
-nav #link-about-me {
-  display: flex;
-  gap: 0;
-  align-items: inherit;
-  text-decoration: none;
-  margin-right: auto;
-}
-nav #link-about-me-text {
-  font-size: var(--font-size-l);
-  padding-left: 1rem;
-  color: var(--textcolor);
-  text-wrap: nowrap;
-}
-nav #link-about-me-text:active {
-  opacity: 0.8;
-}
-nav #link-about-me-logo {
-  height: 40px;
-  width: 42px;
-  z-index: 1;
-  background-color: var(--textcolor);
-  -webkit-mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
-  mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
-}
-nav #link-portfolio, nav #link-contact {
-  text-decoration: none;
-  color: var(--textcolor);
-}
-nav #link-portfolio:hover, nav #link-contact:hover {
-  text-decoration: underline;
-}
-nav #link-portfolio:active, nav #link-contact:active {
-  opacity: 0.8;
-}
 
-/*About*/
-#about-me {
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
-  height: fit-content;
-  min-height: 100vh;
+.section--anchor, .section--anchor_portfolio, .section--anchor_about-me {
+  position: absolute;
+  visibility: hidden;
 }
-#about-me-content {
-  display: flex;
-  gap: 5rem;
+.section--anchor_about-me {
+  top: -15rem;
 }
-#about-me-content-link {
+.section--anchor_portfolio {
+  top: -5rem;
+}
+.section--header {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  width: 100%;
+  padding: var(--padding-body);
+  background: url("/assets/line-distortions-4-transparentcolours.png") no-repeat center;
+  background-size: cover;
+}
+.section--container_row {
+  display: flex;
   gap: 1rem;
   flex-wrap: wrap;
 }
-#about-me-content-link #download-resume {
+.section--container_row_space-between {
   display: flex;
-  align-items: center;
-  gap: 6px;
-  padding: 10px 15px;
-  height: fit-content;
-  background-color: rgb(193, 72, 31);
-  color: var(--textcolor);
-  text-decoration: none;
+  gap: 1.5rem;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-#about-me-content-link #download-resume:hover {
-  scale: 1.01;
-  transition: all 100ms;
+.section--container_column {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 2.5rem;
+  padding-left: var(--padding-body);
+  padding-right: var(--padding-body);
 }
-#about-me-content-link #download-resume:active {
-  color: inherit;
-  scale: 0.9;
-  transition: all 100ms;
+.section--container_column_border-bottom {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-bottom: 1px solid var(--textcolor);
 }
-#about-me-anchor {
-  display: block;
-  position: relative;
-  top: -15rem;
-  visibility: hidden;
+.section--container_text {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 2rem auto;
 }
-#about-me #headshot-container {
+.section--avatar {
   width: fit-content;
   height: fit-content;
   border-radius: 100px;
   overflow: visible;
 }
-#about-me #headshot {
+.section--avatar img {
   width: 250px;
   height: auto;
   object-position: top;
   object-fit: cover;
   clip-path: circle();
 }
-#about-me #bio {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  margin: 2rem auto;
+.section--heading, .section--heading_sm, .section--heading_md, .section--heading_lg, .section--heading_xl {
+  width: fit-content;
 }
-#about-me #callout-work {
+.section--heading_xl {
+  font-size: var(--font-size-xl);
+  font-weight: normal;
+}
+.section--heading_lg {
+  font-size: var(--font-size-l);
+  font-weight: normal;
+}
+.section--heading_md {
+  font-size: var(--font-size-m);
+  font-weight: 500;
+}
+.section--heading_sm {
+  font-size: var(--font-size-s);
+  font-weight: normal;
+}
+.section--paragraph {
+  font-size: 1rem;
+}
+.section--paragraph_centered {
+  align-self: center;
+  text-align: center;
+}
+.section--callout {
   padding: 1rem;
   width: 33%;
   min-width: 230px;
@@ -338,6 +284,100 @@ nav #link-portfolio:active, nav #link-contact:active {
   border: 2px dotted rgb(227, 163, 39);
   animation: fade-in-right;
   animation-duration: 800ms;
+}
+.section--link, .section--link_with-icon_lg, .section--link_with-icon {
+  width: fit-contents;
+  text-decoration: none;
+  color: var(--textcolor);
+}
+.section--link:hover, .section--link_with-icon_lg:hover, .section--link_with-icon:hover {
+  text-decoration: underline;
+}
+.section--link:active, .section--link_with-icon_lg:active, .section--link_with-icon:active {
+  opacity: 0.8;
+}
+.section--link:focus, .section--link_with-icon_lg:focus, .section--link_with-icon:focus {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0001) 50%, var(--textcolor-20) 50%);
+}
+.section--link:focus-visible, .section--link_with-icon_lg:focus-visible, .section--link_with-icon:focus-visible {
+  outline: 2px solid var(--textcolor);
+  outline-offset: 0.25em;
+}
+.section--link_button {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.section--link_bg-box {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 4rem;
+  gap: 2.5rem;
+  background-color: var(--background);
+  filter: invert(5%);
+}
+.section--link_with-icon {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.section--link_with-icon:hover {
+  text-decoration: none;
+  background-color: var(--textcolor);
+}
+.section--link_with-icon_lg {
+  display: flex;
+  align-items: inherit;
+  margin-right: auto;
+  gap: 1rem;
+  padding-left: 1rem;
+  text-wrap: nowrap;
+  font-size: var(--font-size-l);
+  text-decoration: none;
+}
+.section--link_with-icon_lg span {
+  height: 40px;
+  width: 42px;
+  background-color: var(--textcolor);
+  -webkit-mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
+  mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
+}
+
+.link-button {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 0.5rem 1rem;
+  height: fit-content;
+  background-color: rgb(193, 72, 31);
+  color: var(--textcolor);
+  font-size: var(--font-size-s);
+  text-decoration: none;
+}
+.link-button:hover {
+  scale: 1.01;
+  transition: all 100ms;
+}
+.link-button:active {
+  color: inherit;
+  scale: 0.9;
+  transition: all 100ms;
+}
+.link-button:focus {
+  outline: 2px solid var(--textcolor);
+}
+.link-button:focus-visible {
+  outline: 2px solid var(--textcolor);
+  animation: press 0.5s ease;
+}
+.link-button--label {
+  font-size: var(--font-size-s);
+}
+.link-button--label_sm {
+  font-size: var(--font-size-xs);
 }
 
 @keyframes fade-in-right {
@@ -350,37 +390,7 @@ nav #link-portfolio:active, nav #link-contact:active {
     opacity: 1;
   }
 }
-/*Portfolio*/
-#portfolio {
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
-  position: relative;
-  margin-bottom: 5rem;
-}
-#portfolio-anchor {
-  display: block;
-  position: relative;
-  top: -5rem;
-  visibility: hidden;
-}
-#portfolio-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background: url("assets/line-distortions-4-transparentcolours.png") no-repeat center;
-  background-size: cover;
-}
-#portfolio-content {
-  display: flex;
-  flex-direction: column;
-  border-bottom: 1px solid var(--textcolor);
-}
-
-.portfolio-item-header {
+.portfolio-item--header {
   display: flex;
   flex-wrap: wrap;
   padding: 2.5rem 5rem 2.5rem 0;
@@ -394,26 +404,31 @@ nav #link-portfolio:active, nav #link-contact:active {
   border-top: 1px solid var(--textcolor);
   cursor: pointer;
 }
-.portfolio-item-header:focus {
+.portfolio-item--header:focus {
   background-color: var(--textcolor-20);
 }
-.portfolio-item-header:focus-visible {
+.portfolio-item--header:focus-visible {
   outline: 3px solid rgb(227, 163, 39);
 }
-.portfolio-item-date {
-  opacity: 0.5;
+.portfolio-item--name {
+  font-size: var(--font-size-l);
+  font-weight: normal;
 }
-.portfolio-item-tags {
+.portfolio-item--date {
+  opacity: 0.7;
+}
+.portfolio-item--taglist {
   display: inline-flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
-.portfolio-item-tags .item-tag {
+.portfolio-item--tag {
   text-wrap: nowrap;
   padding: 0.3rem 0.5rem;
   border: 1px solid;
+  font-size: var(--font-size-s);
 }
-.portfolio-item .accordion-button {
+.portfolio-item--accordion-button {
   position: absolute;
   right: 0rem;
   padding: 0.5rem;
@@ -421,142 +436,84 @@ nav #link-portfolio:active, nav #link-contact:active {
   align-self: flex-start;
   cursor: pointer;
 }
-.portfolio-item .accordion-button:hover {
+.portfolio-item--accordion-button:hover {
   transform: translateY(5px);
   transition: all 0.2s ease;
 }
-.portfolio-item-details {
+.portfolio-item--accordion-button_active {
+  transform: rotate(180deg);
+  transition: all 0.3s;
+}
+.portfolio-item--accordion-button_active:hover {
+  transform: translateY(-5px) rotate(180deg);
+  transition: all 0.2s ease;
+}
+.portfolio-item--details {
   display: flex;
   flex-direction: column;
   padding-bottom: 5rem;
   overflow: hidden;
+  border-bottom: 1px solid var(--textcolor);
 }
-
-.obj-sum {
+.portfolio-item--container_rows {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 2.5rem;
   margin: 2.5rem 0;
 }
-.obj-sum div {
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-}
-.obj-sum .objective {
-  flex: 1;
-  min-width: 300px;
-}
-.obj-sum .summary {
-  flex: 2;
-  min-width: 300px;
-}
-
-.panel-container {
+.portfolio-item--container_responsive-grid {
   display: grid;
   width: 100%;
   grid-template-columns: 1fr 1fr;
   gap: 2.5rem;
   margin-bottom: 5em;
   grid-auto-flow: row;
-  box-sizing: "border-box";
 }
-
-.panel {
+.portfolio-item--description, .portfolio-item--description_figure, .portfolio-item--description_summary, .portfolio-item--description_objective {
   display: flex;
-  margin: 0;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
+  margin: 0;
 }
-.panel img {
+.portfolio-item--description_objective {
+  flex: 1;
+  min-width: 300px;
+}
+.portfolio-item--description_summary {
+  flex: 2;
+  min-width: 300px;
+}
+.portfolio-item--figure {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.portfolio-item--image, .portfolio-item--image_hero {
+  width: 100%;
+  height: auto;
+  opacity: 0.8;
+  object-fit: cover;
+}
+.figure {
+  margin: 0;
+}
+.figure--heading {
+  font-size: var(--font-size-s);
+  font-weight: normal;
+}
+.figure--text {
+  opacity: 0.7;
+}
+.figure--image {
   width: 100%;
   height: auto;
   opacity: 0.8;
 }
-.panel iframe {
+.figure--video {
   width: 100%;
   height: 600px;
-}
-
-.fig-caption {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.fig-caption .panel-desc {
-  opacity: 0.6;
-}
-
-#coming-soon {
-  align-self: center;
-  opacity: 0.8;
-}
-
-#portfolio-link {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem 4rem;
-  gap: 2.5rem;
-  background-color: var(--background);
-  filter: invert(5%);
-}
-#portfolio-link p {
-  text-align: center;
-  width: 1fr;
-  min-width: 70% px;
-}
-#portfolio-link #download-portfolio {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  padding: 10px 15px;
-  height: fit-content;
-  background-color: rgb(193, 72, 31);
-  color: var(--textcolor);
-  text-decoration: none;
-}
-#portfolio-link #download-portfolio:hover {
-  scale: 1.01;
-  transition: all 100ms;
-}
-#portfolio-link #download-portfolio:active {
-  color: inherit;
-  scale: 0.9;
-  transition: all 100ms;
-}
-
-/*Contact*/
-.contact {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  padding-top: 4rem;
-  line-height: 2rem;
-  border-top: 1px solid var(--textcolor, 0.1);
-}
-.contact-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: baseline;
-  flex-wrap: wrap;
-  max-width: 85%;
-  gap: 2rem;
-}
-.contact-content-links {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  text-decoration: none;
-}
-.contact-content-links a {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  text-decoration: none;
 }
 
 #error {
@@ -574,13 +531,6 @@ nav #link-portfolio:active, nav #link-contact:active {
 }
 #error p {
   font-size: var(--font-size-l);
-}
-
-/*Footer*/
-footer {
-  text-align: end;
-  opacity: 0.7;
-  color: var(--textcolor);
 }
 
 /*# sourceMappingURL=styles.css.map */
