--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,6 +14,8 @@
 
    --font-size-xs: calc((16/16)*1rem);
 
+   --padding-body: 5rem;
+
    .material-icons.md-36 {
       font-size: 36px;
    }
@@ -26,8 +28,12 @@
 }
 
 @media screen and (max-width:800px) {
+   :root{
+      --padding-body: 2.5rem;
+   }
+   
    body {
-      .panel-container {
+      .portfolio-item--container_responsive-grid {
          display: flex;
          flex-direction: column;
          width: 100%;
@@ -36,11 +42,12 @@
          box-sizing: "border-box",
       }
 
-      .hero-image {
+      .portfolio-item--image_hero {
          height: 250px !important;
+         width: auto !important;
       }
 
-      iframe {
+      .figure--video {
          height: 250px !important;
       }
 
@@ -65,40 +72,17 @@
    }
 
    body {
-      .padding-sides {
-         padding-left: 2.5rem;
-         padding-right: 2.5rem;
-      }
-
-      .margin-sides {
-         margin-left: 2.5rem;
-         margin-right: 2.5rem;
-      }
-
-      #link-about-me-text {
+      #camod-name {
          width: 0;
          height: 0;
          padding-left: 0 !important;
          overflow: hidden;
-      }
-
-      #menu-button {
-         display: block;
       }
    }
 }
 
 * {
    box-sizing: border-box;
-}
-
-section {
-   margin-bottom: 2rem;
-}
-
-body {
-   margin: 0;
-   background-color: var(--background);
 }
 
 /*Styles*/
@@ -115,24 +99,9 @@ body {
    margin-left: auto;
 }
 
-.heading1 {
-   font-size: var(--font-size-xl);
-   font-weight: normal;
-}
-
-.heading2 {
-   font-size: var(--font-size-l);
-   font-weight: normal;
-}
-
 .heading3 {
    font-size: var(--font-size-m);
    font-weight: 600;
-}
-
-.heading4 {
-   font-size: var(--font-size-s);
-   font-weight: normal;
 }
 
 .red {
@@ -149,32 +118,6 @@ body {
 
 .yellow {
    color: $yellow;
-}
-
-.tool-tip {
-   display: inline-block;
-   pointer-events: fill;
-
-   &:hover .tool-tip-text {
-      visibility: visible;
-      opacity: 1;
-      border: 1px solid var(--background);
-   }
-}
-
-.tool-tip .tool-tip-text {
-   visibility: hidden;
-   width: fit-content;
-   background-color: var(--textcolor);
-   color: var(--background);
-   text-align: right;
-   padding: 2px 5px;
-
-   position: absolute;
-   z-index: 2;
-
-   opacity: 0;
-   transition: opacity 0.3s;
 }
 
 .focus-link {
@@ -197,28 +140,6 @@ body {
       scale: 1.0;
    }
 }
-
-.focus-button {
-   &:focus {
-      outline: 2px solid var(--textcolor);
-   }
-
-   &:focus-visible {
-      outline: 2px solid var(--textcolor);
-      animation: press 0.5s ease;
-   }
-}
-
-.padding-sides {
-   padding-left: 5rem;
-   padding-right: 5rem;
-}
-
-.margin-sides {
-   margin-left: 5rem;
-   margin-right: 5rem;
-}
-
 /*Elements*/
 
 h1,
@@ -229,157 +150,191 @@ p {
    margin: 0;
 }
 
-body {
+
+.body {
    display: flex;
    flex-direction: column;
-   gap: 5rem;
-}
-
-/*Header*/
-header {
-   display: flex;
-   align-items: baseline;
-   justify-content: space-between;
-   padding-top: 32px;
-   padding-bottom: 32px;
    margin: 0;
-
-   position: sticky;
-   z-index: 1;
-   top: 0;
-
    background-color: var(--background);
-   border-bottom: 1px solid var(--textcolor);
+
+   &--section {
+      padding-left: var(--padding-body);
+      padding-right: var(--padding-body);
+      display: flex;
+      margin-bottom: var(--padding-body);
+      gap: 2rem;
+
+      &_header {
+         @extend .body--section;
+         align-items: baseline;
+         justify-content: space-between;
+         padding-top: 32px;
+         padding-bottom: 32px;
+
+         position: sticky;
+         z-index: 1;
+         top: 0;
+
+         background-color: var(--background);
+         border-bottom: 1px solid var(--textcolor);
+      }
+
+      &_about-me {
+         @extend .body--section;
+         flex-direction: column;
+         height: fit-content;
+         min-height: 100vh;
+      }
+
+      &_portfolio {
+         @extend .body--section;
+         flex-direction: column;
+         position: relative;
+         align-items: center;
+         padding: 0;
+      }
+
+      &_contact {
+         @extend .body--section;
+         flex-direction: column;
+         padding-top: 2.5rem;
+         border-top: 1px solid var(--textcolor);
+      }
+
+      &_footer {
+         @extend .body--section;
+         justify-content: flex-end;
+      }
+   }
 }
 
-nav {
+.navigation {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: baseline;
    gap: 1rem;
    width: 100%;
+}
 
-   #link {
-      &-about-me {
-         display: flex;
-         gap: 0;
-         align-items: inherit;
-         text-decoration: none;
-         margin-right: auto;
+.section {
+   &--anchor {
+      position: absolute;
+      visibility: hidden;
 
-         &-text {
-            font-size: var(--font-size-l);
-            padding-left: 1rem;
-            color: var(--textcolor);
-            text-wrap: nowrap;
-
-            &:active {
-               opacity: 0.8;
-            }
-         }
-
-         &-logo {
-            height: 40px;
-            width: 42px;
-            z-index: 1;
-            background-color: var(--textcolor);
-            -webkit-mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
-            mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
-         }
+      &_about-me {
+         @extend .section--anchor;
+         top: -15rem;
       }
 
-      &-portfolio,
-      &-contact {
-         text-decoration: none;
-         color: var(--textcolor);
-
-         &:hover {
-            text-decoration: underline;
-         }
-
-         &:active {
-            opacity: 0.8;
-         }
+      &_portfolio {
+         @extend .section--anchor;
+         top: -5rem;
       }
    }
 
-}
-
-/*About*/
-#about-me {
-   display: flex;
-   flex-direction: column;
-   gap: 2.5rem;
-   height: fit-content;
-   min-height: 100vh;
-
-   &-content {
+   &--header {
       display: flex;
-      gap: 5rem;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: row;
+      width: 100%;
 
-      &-link {
+      padding: var(--padding-body);
+      background: url("/assets/line-distortions-4-transparentcolours.png") no-repeat center;
+      background-size: cover;
+   }
+
+   &--container {
+      &_row{
          display: flex;
-         align-items: center;
          gap: 1rem;
          flex-wrap: wrap;
 
-         #download-resume {
+         &_space-between{
             display: flex;
-            align-items: center;
-            gap: 6px;
-            padding: 10px 15px;
-            height: fit-content;
-            background-color: $red;
-            color: var(--textcolor);
-
-            text-decoration: none;
-
-            &:hover {
-               scale: 1.01;
-               transition: all 100ms;
-            }
-
-            &:active {
-               color: inherit;
-               scale: 0.9;
-               transition: all 100ms;
-            }
-
+            gap: 1.5rem;
+            justify-content: space-between;
+            flex-wrap: wrap;
          }
+      }
+
+      &_column {
+         display: flex;
+         flex-direction: column;
+         width: 100%;
+         gap: 2.5rem;
+         padding-left: var(--padding-body);
+         padding-right: var(--padding-body);
+
+         &_border-bottom {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            border-bottom: 1px solid var(--textcolor);
+         }
+      }
+
+      &_text {
+         display: flex;
+         flex-direction: column;
+         gap: 2rem;
+         margin: 2rem auto;
       }
    }
 
-   &-anchor {
-      display: block;
-      position: relative;
-      top: -15rem;
-      visibility: hidden;
-   }
-
-   #headshot-container {
+   &--avatar {
       width: fit-content;
       height: fit-content;
       border-radius: 100px;
       overflow: visible;
+
+      img {
+         width: 250px;
+         height: auto;
+         object-position: top;
+         object-fit: cover;
+         clip-path: circle();
+      }
    }
 
-   #headshot {
-      width: 250px;
-      height: auto;
-      object-position: top;
-      object-fit: cover;
-      clip-path: circle();
+   &--heading {
+      width: fit-content;
+
+      &_xl {
+         @extend .section--heading;
+         font-size: var(--font-size-xl);
+         font-weight: normal;
+      }
+
+      &_lg {
+         @extend .section--heading;
+         font-size: var(--font-size-l);
+         font-weight: normal;
+      }
+
+      &_md {
+         @extend .section--heading;
+         font-size: var(--font-size-m);
+         font-weight: 500;
+      }
+
+      &_sm {
+         @extend .section--heading;
+         font-size: var(--font-size-s);
+         font-weight: normal;
+      }
    }
 
-   #bio {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      margin: 2rem auto;
+   &--paragraph {
+      font-size: 1rem;
+      &_centered{
+         align-self: center;
+         text-align: center;
+      }
    }
 
-   #callout-work {
+   &--callout {
       padding: 1rem;
       width: 33%;
       min-width: 230px;
@@ -390,6 +345,123 @@ nav {
 
       animation: fade-in-right;
       animation-duration: 800ms;
+   }
+
+   &--link {
+      width: fit-contents;
+      text-decoration: none;
+      color: var(--textcolor);
+
+      &:hover {
+         text-decoration: underline;
+      }
+
+      &:active {
+         opacity: 0.8;
+      }
+
+      &:focus {
+         background: linear-gradient(to bottom, rgb(0, 0, 0, 0.0001) 50%, var(--textcolor-20) 50%);
+      }
+
+      &:focus-visible {
+         outline: 2px solid var(--textcolor);
+         outline-offset: 0.25em;
+      }
+
+      &_button {
+         display: flex;
+         align-items: center;
+         gap: 1rem;
+         flex-wrap: wrap;
+      }
+
+      &_bg-box {
+         display: flex;
+         flex-wrap: wrap;
+         align-items: center;
+         justify-content: center;
+         padding: 2rem 4rem;
+         gap: 2.5rem;
+         background-color: var(--background);
+         filter: invert(5%);
+      }
+
+      &_with-icon {
+         @extend .section--link;
+         display: flex;
+         align-items: center;
+         gap: 1rem;
+
+            &:hover{
+               text-decoration: none;
+               background-color: var(--textcolor);
+
+            }
+
+         &_lg {
+            @extend .section--link;
+            display: flex;
+            align-items: inherit;
+            margin-right: auto;
+            gap: 1rem;
+            padding-left: 1rem;
+
+            text-wrap: nowrap;
+            font-size: var(--font-size-l);
+            text-decoration: none;
+
+
+            span {
+               height: 40px;
+               width: 42px;
+               background-color: var(--textcolor);
+               -webkit-mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
+               mask: url(/assets/SVG/camod-logo-black.svg) no-repeat center;
+            }
+         }
+      }
+   }
+}
+
+.link-button {
+   display: flex;
+   align-items: center;
+   gap: 6px;
+   padding: 0.5rem 1rem;
+   height: fit-content;
+   background-color: $red;
+   color: var(--textcolor);
+   font-size: var(--font-size-s);
+
+   text-decoration: none;
+
+   &:hover {
+      scale: 1.01;
+      transition: all 100ms;
+   }
+
+   &:active {
+      color: inherit;
+      scale: 0.9;
+      transition: all 100ms;
+   }
+
+   &:focus {
+      outline: 2px solid var(--textcolor);
+   }
+
+   &:focus-visible {
+      outline: 2px solid var(--textcolor);
+      animation: press 0.5s ease;
+   }
+
+   &--label {
+      font-size: var(--font-size-s);
+
+      &_sm {
+         font-size: var(--font-size-xs);
+      }
    }
 }
 
@@ -405,43 +477,8 @@ nav {
    }
 }
 
-/*Portfolio*/
-#portfolio {
-   display: flex;
-   flex-direction: column;
-   gap: 2.5rem;
-   position: relative;
-   margin-bottom: 5rem;
-
-   &-anchor {
-      display: block;
-      position: relative;
-      top: -5rem;
-      visibility: hidden;
-   }
-
-   &-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-direction: row;
-
-      padding-top: 5rem;
-      padding-bottom: 5rem;
-
-      background: url("assets/line-distortions-4-transparentcolours.png") no-repeat center;
-      background-size: cover;
-   }
-
-   &-content {
-      display: flex;
-      flex-direction: column;
-      border-bottom: 1px solid var(--textcolor);
-   }
-}
-
 .portfolio-item {
-   &-header {
+   &--header {
       display: flex;
       flex-wrap: wrap;
       padding: 2.5rem 5rem 2.5rem 0;
@@ -465,24 +502,30 @@ nav {
       }
    }
 
-   &-date {
-      opacity: 0.5;
+   &--name {
+      font-size: var(--font-size-l);
+      font-weight: normal;
    }
 
-   &-tags {
+   &--date {
+      opacity: 0.7;
+   }
+
+   &--taglist {
       display: inline-flex;
       flex-wrap: wrap;
       gap: 1rem;
-
-      .item-tag {
-         text-wrap: nowrap;
-         padding: 0.3rem 0.5rem;
-
-         border: 1px solid;
-      }
    }
 
-   .accordion-button {
+   &--tag {
+      text-wrap: nowrap;
+      padding: 0.3rem 0.5rem;
+
+      border: 1px solid;
+      font-size: var(--font-size-s);
+   }
+
+   &--accordion-button {
       position: absolute;
       right: 0rem;
       padding: 0.5rem;
@@ -494,158 +537,108 @@ nav {
          transform: translateY(5px);
          transition: all 0.2s ease;
       }
+
+      &_active {
+         transform: rotate(180deg);
+         transition: all 0.3s;
+
+         &:hover {
+            transform: translateY(-5px) rotate(180deg);
+            transition: all 0.2s ease;
+         }
+      }
    }
 
-   &-details {
+   &--details {
       display: flex;
       flex-direction: column;
       padding-bottom: 5rem;
       overflow: hidden;
+      border-bottom: 1px solid var(--textcolor);
    }
-}
 
-.obj-sum {
-   display: flex;
-   flex-direction: row;
-   flex-wrap: wrap;
-   gap: 2.5rem;
-   margin: 2.5rem 0;
+   &--container {
+      &_rows {
+         display: flex;
+         flex-direction: row;
+         flex-wrap: wrap;
+         gap: 2.5rem;
+         margin: 2.5rem 0;
+      }
 
-   div {
+      &_responsive-grid {
+         display: grid;
+         width: 100%;
+         grid-template-columns: 1fr 1fr;
+         gap: 2.5rem;
+         margin-bottom: 5em;
+         grid-auto-flow: row;
+      }
+   }
+
+   &--description {
       display: flex;
       flex-direction: column;
-      gap: 1.2rem;
+      gap: 1rem;
+      width: 100%;
+      margin: 0;
+
+      &_objective {
+         @extend .portfolio-item--description;
+         flex: 1;
+         min-width: 300px,
+      }
+
+      &_summary {
+         @extend .portfolio-item--description;
+         flex: 2;
+         min-width: 300px,
+      }
+
+      &_figure {
+         @extend .portfolio-item--description;
+      }
    }
 
-   .objective {
-      flex: 1;
-      min-width: 300px,
+   &--figure {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
    }
 
-   .summary {
-      flex: 2;
-      min-width: 300px,
+   &--image {
+      width: 100%;
+      height: auto;
+      opacity: 0.8;
+      object-fit: cover;
+
+      &_hero {
+         @extend .portfolio-item--image;
+      }
    }
 }
 
-.panel-container {
-   display: grid;
-   width: 100%;
-   grid-template-columns: 1fr 1fr;
-   gap: 2.5rem;
-   margin-bottom: 5em;
-   grid-auto-flow: row;
-   box-sizing: "border-box";
-}
-
-.panel {
-   display: flex;
+.figure {
    margin: 0;
-   flex-direction: column;
-   gap: 1rem;
 
-   img {
+   &--heading {
+      font-size: var(--font-size-s);
+      font-weight: normal;
+   }
+
+   &--text {
+      opacity: 0.7;
+   }
+
+   &--image {
       width: 100%;
       height: auto;
       opacity: 0.8;
    }
 
-   iframe {
+   &--video {
       width: 100%;
       height: 600px;
-   }
-}
-
-.fig-caption {
-   display: flex;
-   flex-direction: column;
-   gap: 1rem;
-
-   .panel-desc {
-      opacity: 0.6;
-   }
-}
-
-#coming-soon {
-   align-self: center;
-   opacity: 0.8;
-}
-
-#portfolio-link {
-   display: flex;
-   flex-wrap: wrap;
-   align-items: center;
-   justify-content: center;
-   padding: 2rem 4rem;
-   gap: 2.5rem;
-   background-color: var(--background);
-   filter: invert(5%);
-
-   p {
-      text-align: center;
-      width: 1fr;
-      min-width: 70%px;
-   }
-
-   #download-portfolio {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      padding: 10px 15px;
-      height: fit-content;
-      background-color: $red;
-      color: var(--textcolor);
-
-      text-decoration: none;
-
-      &:hover {
-         scale: 1.01;
-         transition: all 100ms;
-      }
-
-      &:active {
-         color: inherit;
-         scale: 0.9;
-         transition: all 100ms;
-      }
-
-   }
-}
-
-/*Contact*/
-.contact {
-   display: flex;
-   flex-direction: column;
-   gap: 1.5rem;
-   padding-top: 4rem;
-   line-height: 2rem;
-
-   border-top: 1px solid var(--textcolor, 0.1);
-
-   &-content {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: baseline;
-      flex-wrap: wrap;
-      max-width: 85%;
-      gap: 2rem;
-
-      &-links {
-         display: flex;
-         align-items: center;
-         gap: 1rem;
-
-         text-decoration: none;
-
-         a {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-
-            text-decoration: none;
-         }
-      }
    }
 }
 
@@ -667,12 +660,4 @@ nav {
    p {
       font-size: var(--font-size-l);
    }
-}
-
-/*Footer*/
-footer {
-   text-align: end;
-   opacity: 0.7;
-   color: var(--textcolor);
-
 }
